--- a/BloodConnector.WebAPI/app/views/about.html
+++ b/BloodConnector.WebAPI/app/views/about.html
@@ -4,10 +4,10 @@
         <div class="col-md-12">
             <div class="well well-sm clearfix">
                 <div class="row">
-                    <div class="col-md-2 col-lg-2 col-xs-2 col-sm-2">
+                    <div class="col-md-2 col-lg-2 col-sm-2">
                         <img src="https://i.imgur.com/4zcf9Yj.jpg" class="img-responsive" />
                     </div>
-                    <div class="col-md-10 col-lg-10 col-xs-10 col-sm-10">
+                    <div class="col-md-10 col-lg-10 col-sm-10">
                         <h2 class="mt0">Arifur Rahman (Sazal)</h2>
                         <h4 class="mt0">(Senior software engineer at <a href="http://www.brainstation-23.com/" target="_blank">BrainStation-23 Ltd</a>)</h4>
                         <ul class="list-unstyled">
@@ -27,22 +27,22 @@
         <div class="col-md-12">
             <div class="well well-sm clearfix">
                 <div class="row">
-                    <div class="col-md-2 col-lg-2 col-xs-2 col-sm-2">
+                    <div class="col-md-2 col-lg-2 col-sm-2">
                         <img src="https://i.imgur.com/ipnC1yH.jpg" class="img-responsive" />
                     </div>
-                    <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
+                    <div class="col-md-4 col-lg-4 col-sm-4">
                         <h2 class="mt0">Mafi Islam</h2>
                         <h4 class="mt0">(TV News Anchor/Reporter at <a href="http://www.ekattor.tv" target="_blank">Ekattor</a>)</h4>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone"></i> +8801721654450</li>
-                            <li><i class="fa fa-envelope"></i> arif.rahman2009@gmail.com</li>
+                            <li><i class="fa fa-phone"></i> +8801711084145</li>
+                            <li><i class="fa fa-envelope"></i> mafi30th@yahoo.com</li>
                             <li><i class="fa fa-facebook"></i> <a href="https://www.facebook.com/mafi.skylark" target="_blank">Facebook</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-lg-2 col-xs-2 col-sm-2">
+                    <div class="col-md-2 col-lg-2 col-sm-2">
                         <img src="https://i.imgur.com/qJzK8wT.jpg" class="img-responsive" />
                     </div>
-                    <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
+                    <div class="col-md-4 col-lg-4 col-sm-4">
                         <h2 class="mt0">Jahangir Hossain Duranto Durbar</h2>
                         <h4 class="mt0">(Work at <a href="http://www.floralimited.com" target="_blank">Flora Limited</a>)</h4>
                         <ul class="list-unstyled">
