--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -359,6 +359,10 @@ div.user-menu div.user-menu-content:not(.active){
     cursor: pointer;
 }
 
+.light-green-color {
+    color: #00ff7f;
+}
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
     .user-image {
