--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -52,14 +52,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title"><i class="fa fa-info-circle" aria-hidden="true"></i> Information</h4>
+                        <h4 class="modal-title"><i class="fa fa-info-circle light-green-color" aria-hidden="true"></i> Information</h4>
                     </div>
                     <div class="modal-body">
-                        This is a small modal. This is a small modal. This is a small modal.
-                        This is a small modal. This is a small modal. This is a small modal.
+                        All the registered user can see your <b>Contact Number</b> and <b>E-mail</b>. So they can call you or send email for 
+                        blood.
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
