--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -1,11 +1,73 @@
 ﻿<div class="row" data-ng-controller="profileController as vm">
-    <div class="col-md-2">
-        &nbsp;
-    </div>
-    <div class="col-md-8">
-        <h4>In Progress</h4>
-    </div>
-    <div class="col-md-2">
-        &nbsp;
+    <div class="toppad">
+        <div class="panel panel-default">
+            <div class="panel-heading clearfix">
+                <h3 class="panel-title pull-left">Sheena Shrestha</h3>
+                <span class="pull-right">
+                    <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
+                    <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                </span>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-3" align="center">
+                        <div style="width: 150px; display: inline-block" tabindex="0" aria-label="Profile image">
+                            <div class="profile-image">
+                                <div class="profile-image-button">
+                                    <button class="upload-img" type="file">
+                                        <i class="fa fa-camera" aria-hidden="true"></i>
+                                        <span>Add</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="img-circle img-responsive">
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-9">
+                        <table class="table table-user-information">
+                            <tbody>
+                                <tr>
+                                    <td>Department:</td>
+                                    <td>Programming</td>
+                                </tr>
+                                <tr>
+                                    <td>Hire date:</td>
+                                    <td>06/23/2013</td>
+                                </tr>
+                                <tr>
+                                    <td>Date of Birth</td>
+                                    <td>01/24/1988</td>
+                                </tr>
+
+                                <tr>
+                                <tr>
+                                    <td>Gender</td>
+                                    <td>Female</td>
+                                </tr>
+                                <tr>
+                                    <td>Home Address</td>
+                                    <td>Kathmandu,Nepal</td>
+                                </tr>
+                                <tr>
+                                    <td>Email</td>
+                                    <td><a href="mailto:info@support.com">info@support.com</a></td>
+                                </tr>
+                            <td>Phone Number</td>
+                            <td>
+                                123-4567-890(Landline)<br><br>555-4567-890(Mobile)
+                            </td>
+
+                            </tr>
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer text-right">
+                Last Update : <span class="text-info">May 05,2014,03:00 pm</span>
+            </div>
+
+        </div>
     </div>
 </div>
