--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -364,6 +364,10 @@ div.user-menu div.user-menu-content:not(.active){
 }
 
 /*Start : Profile image*/
+.profile-image {
+    width: 150px; 
+    display: inline-block
+}
 .profile-image-button:hover .upload-img {
     display: block;
 }
@@ -389,7 +393,7 @@ div.user-menu div.user-menu-content:not(.active){
 .upload-img {
     position: absolute!important;
     width: 100%;
-    height: 44px;
+    height: 75px;
     bottom: 0!important;
     left: 0;
     z-index: 999!important;
