--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -11,14 +11,12 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3" align="center">
-                        <div style="width: 150px; display: inline-block" tabindex="0" aria-label="Profile image">
-                            <div class="profile-image">
-                                <div class="profile-image-button">
-                                    <button class="upload-img" type="file">
-                                        <i class="fa fa-camera" aria-hidden="true"></i>
-                                        <span>Add</span>
-                                    </button>
-                                </div>
+                        <div class="profile-image" tabindex="0" aria-label="Profile image">
+                            <div class="profile-image-button">
+                                <button class="upload-img" type="button">
+                                    <i class="fa fa-camera" aria-hidden="true"></i>
+                                    <span>Add</span>
+                                </button>
                             </div>
                         </div>
                         <img class="img-circle img-responsive">
@@ -39,7 +37,7 @@
                                     <td>01/24/1988</td>
                                 </tr>
 
-                                <tr>
+                                
                                 <tr>
                                     <td>Gender</td>
                                     <td>Female</td>
@@ -48,10 +46,11 @@
                                     <td>Home Address</td>
                                     <td>Kathmandu,Nepal</td>
                                 </tr>
-                                <tr>
-                                    <td>Email</td>
-                                    <td><a href="mailto:info@support.com">info@support.com</a></td>
-                                </tr>
+                            <tr>
+                                <td>Email</td>
+                                <td><a href="mailto:info@support.com">info@support.com</a></td>
+                            </tr>
+                            <tr>
                             <td>Phone Number</td>
                             <td>
                                 123-4567-890(Landline)<br><br>555-4567-890(Mobile)
