--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -4,8 +4,8 @@
             <div class="panel-heading clearfix">
                 <h3 class="panel-title pull-left">Sheena Shrestha</h3>
                 <span class="pull-right">
-                    <a href="edit.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
-                    <a data-original-title="Remove this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
+                    <button ng-click="vm.toggleEditMode" title="Edit this user" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></button>
+                    <button ng-click="vm.disableEditMode" title="Remove this user" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></button>
                 </span>
             </div>
             <div class="panel-body">
@@ -26,7 +26,7 @@
                             <tbody>
                                 <tr>
                                     <td>Department:</td>
-                                    <td>Programming</td>
+                                    <td>safsdg</td>
                                 </tr>
                                 <tr>
                                     <td>Hire date:</td>
