--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -368,7 +368,7 @@ div.user-menu div.user-menu-content:not(.active){
     width: 150px; 
     display: inline-block
 }
-.profile-image-button:hover .upload-img {
+.edit-mode .profile-image-button:hover .upload-img {
     display: block;
 }
 
