--- a/BloodConnector.WebAPI/app/views/profile.html
+++ b/BloodConnector.WebAPI/app/views/profile.html
@@ -1,11 +1,11 @@
 ﻿<div class="row" data-ng-controller="profileController as vm">
-    <div class="toppad">
+    <div class="toppad" ng-class="{'edit-mode': vm.editMode}">
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="panel-title pull-left">Sheena Shrestha</h3>
                 <span class="pull-right">
-                    <button ng-click="vm.toggleEditMode" title="Edit this user" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></button>
-                    <button ng-click="vm.disableEditMode" title="Remove this user" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></button>
+                    <button ng-click="vm.enableEditMode()" title="Edit Profile" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></button>
+                    <button ng-click="vm.disablEditeMode()" title="Clear Edit" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove"></i></button>
                 </span>
             </div>
             <div class="panel-body">
@@ -25,8 +25,40 @@
                         <table class="table table-user-information">
                             <tbody>
                                 <tr>
-                                    <td>Department:</td>
-                                    <td>safsdg</td>
+                                    <td>Name:</td>
+                                    <td ng-if="!vm.editMode" ng-bind="vm.profile.name"></td>
+                                    <td ng-if="vm.editMode">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-6 col-md-6">
+                                            <div class="form-group">
+                                                <span class="control-label">First Name :</span>
+                                                <input type="text" name="firstName" id="firstName" class="form-control input-lg"
+                                                       placeholder="First Name"
+                                                       ng-model="vm.registration.firstName"
+                                                       tabindex="0"
+                                                       autofocus/>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-6 col-md-6">
+                                            <div class="form-group">
+                                                <span class="control-label">Last Name :</span>
+                                                <input type="text" name="lastName" id="lastName" class="form-control input-lg"
+                                                       placeholder="Last Name"
+                                                       ng-model="vm.registration.lastName"
+                                                       tabindex="0"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                            <div class="form-group">
+                                                <span class="control-label">Display Name / Nick Name :</span>
+                                                <input type="text" name="nikeName" id="nikeName" class="form-control input-lg"
+                                                       ng-model="vm.registration.nikeName"
+                                                       placeholder="Display Name"
+                                                       tabindex="0" />
+                                            </div>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>Hire date:</td>
